<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_launcher_background"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textColor="@color/MaterialBlueGray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textColor="@color/MaterialBlueGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/myName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textColor="@color/MaterialBlueGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/myClass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textColor="@color/MaterialBlueGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/myID"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textColor="@color/MaterialBlueGray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/mySerial"/>

</LinearLayout>